updated with my site

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</div><!-- /header -->
   <div role="main" class="ui-content">
    <h2>Beta ver.01</h2>
-    <a href="#" id="exhibitions" class="ui-btn">Anchor</a>
+    <a href="#" id="enlace" class="ui-btn">Anchor</a>
     <button class="ui-btn">Button</button>
   </div><!-- /content -->
 	<div data-role="footer">
